--- a/tabl.html
+++ b/tabl.html
@@ -12,7 +12,7 @@
       <div id="top"></div>
       <section class="navigation"> 
 <nav><ul class="nav-list">
-   <li> <a href="main.html" class="nav-button">Главная</a></li>
+   <li> <a href="index.html" class="nav-button">Главная</a></li>
     <li> <a href="history.html" class="nav-button">История игры</a></li>
   <li> <a href="tabl.html" class="nav-button"><u>Таблица</u></a></li>
    <li> <a href="zadacha.html" class="nav-button">Задача + Форма</a></li>
@@ -24,7 +24,7 @@
   <tbody> 
     <tr> 
 <td>
-    <img src="https://cs16.pikabu.ru/s/2025/09/11/09/6fksjdmo.jpg" id="chelik" alt="igra" style="width: 400px;height: 300px;">
+    <a href= https://subwaysurf.fandom.com/ru/wiki/Subway_Surfers ><img src="https://cs16.pikabu.ru/s/2025/09/11/09/6fksjdmo.jpg" id="chelik" alt="igra" style="width: 400px;height: 300px;"></a>
 </td>
 <td>
             <a href="гифка сабвей.gif" target="_blank">
